Managed/Editor/ShaderLab/Internal/ShaderLabParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ShaderLab.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DX12Demo.Editor.ShaderLab.Internal {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class ShaderLabParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, HlslProgram=26, Assign=27, LeftBrace=28, RightBrace=29, StringLiteral=30, 
		BracketLiteral=31, IntegerLiteral=32, FloatLiteral=33, Float=34, Int=35, 
		Color=36, Vector=37, Texture=38, On=39, Off=40, Front=41, Back=42, Zero=43, 
		One=44, SrcColor=45, InvSrcColor=46, SrcAlpha=47, InvSrcAlpha=48, DestAlpha=49, 
		InvDestAlpha=50, DestColor=51, InvDestColor=52, SrcAlphaSat=53, Add=54, 
		Sub=55, RevSub=56, Min=57, Max=58, Never=59, Less=60, Equal=61, LessEqual=62, 
		Greater=63, NotEqual=64, GreaterEqual=65, Always=66, Keep=67, Replace=68, 
		IncrSat=69, DecrSat=70, Invert=71, Incr=72, Decr=73, Identifier=74, Whitespace=75, 
		Newline=76, BlockComment=77, LineComment=78;
	public const int
		RULE_shader = 0, RULE_shaderDeclaration = 1, RULE_propertiesBlock = 2, 
		RULE_passBlock = 3, RULE_passDeclaration = 4, RULE_attributeDeclaration = 5, 
		RULE_numberLiteralExpression = 6, RULE_vectorLiteralExpression = 7, RULE_textureLiteralExpression = 8, 
		RULE_propertyDefaultValueExpression = 9, RULE_propertyTypeDeclaration = 10, 
		RULE_propertyDeclaration = 11, RULE_nameDeclaration = 12, RULE_cullDeclaration = 13, 
		RULE_zTestDeclaration = 14, RULE_zWriteDeclaration = 15, RULE_blendDeclaration = 16, 
		RULE_blendOpDeclaration = 17, RULE_colorMaskDeclaration = 18, RULE_stencilBlock = 19, 
		RULE_stencilDeclaration = 20, RULE_stencilRefDeclaration = 21, RULE_stencilReadMaskDeclaration = 22, 
		RULE_stencilWriteMaskDeclaration = 23, RULE_stencilCompFrontDeclaration = 24, 
		RULE_stencilPassFrontDeclaration = 25, RULE_stencilFailFrontDeclaration = 26, 
		RULE_stencilZFailFrontDeclaration = 27, RULE_stencilCompBackDeclaration = 28, 
		RULE_stencilPassBackDeclaration = 29, RULE_stencilFailBackDeclaration = 30, 
		RULE_stencilZFailBackDeclaration = 31, RULE_hlslProgramDeclaration = 32, 
		RULE_cullModeValue = 33, RULE_blendFactorValue = 34, RULE_blendOpValue = 35, 
		RULE_compareFuncValue = 36, RULE_stencilOpValue = 37;
	public static readonly string[] ruleNames = {
		"shader", "shaderDeclaration", "propertiesBlock", "passBlock", "passDeclaration", 
		"attributeDeclaration", "numberLiteralExpression", "vectorLiteralExpression", 
		"textureLiteralExpression", "propertyDefaultValueExpression", "propertyTypeDeclaration", 
		"propertyDeclaration", "nameDeclaration", "cullDeclaration", "zTestDeclaration", 
		"zWriteDeclaration", "blendDeclaration", "blendOpDeclaration", "colorMaskDeclaration", 
		"stencilBlock", "stencilDeclaration", "stencilRefDeclaration", "stencilReadMaskDeclaration", 
		"stencilWriteMaskDeclaration", "stencilCompFrontDeclaration", "stencilPassFrontDeclaration", 
		"stencilFailFrontDeclaration", "stencilZFailFrontDeclaration", "stencilCompBackDeclaration", 
		"stencilPassBackDeclaration", "stencilFailBackDeclaration", "stencilZFailBackDeclaration", 
		"hlslProgramDeclaration", "cullModeValue", "blendFactorValue", "blendOpValue", 
		"compareFuncValue", "stencilOpValue"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Shader'", "'Properties'", "'Pass'", "'('", "','", "')'", "'Name'", 
		"'Cull'", "'ZTest'", "'ZWrite'", "'Blend'", "'BlendOp'", "'ColorMask'", 
		"'Stencil'", "'Ref'", "'ReadMask'", "'WriteMask'", "'CompFront'", "'PassFront'", 
		"'FailFront'", "'ZFailFront'", "'CompBack'", "'PassBack'", "'FailBack'", 
		"'ZFailBack'", null, "'='", "'{'", "'}'", null, null, null, null, "'Float'", 
		"'Int'", "'Color'", "'Vector'", "'2D'", "'On'", "'Off'", "'Front'", "'Back'", 
		"'Zero'", "'One'", "'SrcColor'", "'InvSrcColor'", "'SrcAlpha'", "'InvSrcAlpha'", 
		"'DestAlpha'", "'InvDestAlpha'", "'DestColor'", "'InvDestColor'", "'SrcAlphaSat'", 
		"'Add'", "'Sub'", "'RevSub'", "'Min'", "'Max'", "'Never'", "'Less'", "'Equal'", 
		"'LessEqual'", "'Greater'", "'NotEqual'", "'GreaterEqual'", "'Always'", 
		"'Keep'", "'Replace'", "'IncrSat'", "'DecrSat'", "'Invert'", "'Incr'", 
		"'Decr'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "HlslProgram", "Assign", "LeftBrace", "RightBrace", "StringLiteral", 
		"BracketLiteral", "IntegerLiteral", "FloatLiteral", "Float", "Int", "Color", 
		"Vector", "Texture", "On", "Off", "Front", "Back", "Zero", "One", "SrcColor", 
		"InvSrcColor", "SrcAlpha", "InvSrcAlpha", "DestAlpha", "InvDestAlpha", 
		"DestColor", "InvDestColor", "SrcAlphaSat", "Add", "Sub", "RevSub", "Min", 
		"Max", "Never", "Less", "Equal", "LessEqual", "Greater", "NotEqual", "GreaterEqual", 
		"Always", "Keep", "Replace", "IncrSat", "DecrSat", "Invert", "Incr", "Decr", 
		"Identifier", "Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ShaderLab.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ShaderLabParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ShaderLabParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ShaderLabParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ShaderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringLiteral() { return GetToken(ShaderLabParser.StringLiteral, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(ShaderLabParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(ShaderLabParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ShaderDeclarationContext[] shaderDeclaration() {
			return GetRuleContexts<ShaderDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShaderDeclarationContext shaderDeclaration(int i) {
			return GetRuleContext<ShaderDeclarationContext>(i);
		}
		public ShaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shader; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderContext shader() {
		ShaderContext _localctx = new ShaderContext(Context, State);
		EnterRule(_localctx, 0, RULE_shader);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(T__0);
			State = 77;
			Match(StringLiteral);
			State = 78;
			Match(LeftBrace);
			State = 82;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1 || _la==T__2) {
				{
				{
				State = 79;
				shaderDeclaration();
				}
				}
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 85;
			Match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PropertiesBlockContext propertiesBlock() {
			return GetRuleContext<PropertiesBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassBlockContext passBlock() {
			return GetRuleContext<PassBlockContext>(0);
		}
		public ShaderDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderDeclarationContext shaderDeclaration() {
		ShaderDeclarationContext _localctx = new ShaderDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_shaderDeclaration);
		try {
			State = 89;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87;
				propertiesBlock();
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 88;
				passBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertiesBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(ShaderLabParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(ShaderLabParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDeclarationContext[] propertyDeclaration() {
			return GetRuleContexts<PropertyDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDeclarationContext propertyDeclaration(int i) {
			return GetRuleContext<PropertyDeclarationContext>(i);
		}
		public PropertiesBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertiesBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertiesBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertiesBlockContext propertiesBlock() {
		PropertiesBlockContext _localctx = new PropertiesBlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_propertiesBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			Match(T__1);
			State = 92;
			Match(LeftBrace);
			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==BracketLiteral || _la==Identifier) {
				{
				{
				State = 93;
				propertyDeclaration();
				}
				}
				State = 98;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 99;
			Match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PassBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(ShaderLabParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(ShaderLabParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PassDeclarationContext[] passDeclaration() {
			return GetRuleContexts<PassDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassDeclarationContext passDeclaration(int i) {
			return GetRuleContext<PassDeclarationContext>(i);
		}
		public PassBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_passBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPassBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PassBlockContext passBlock() {
		PassBlockContext _localctx = new PassBlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_passBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			Match(T__2);
			State = 102;
			Match(LeftBrace);
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67141504L) != 0)) {
				{
				{
				State = 103;
				passDeclaration();
				}
				}
				State = 108;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 109;
			Match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PassDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NameDeclarationContext nameDeclaration() {
			return GetRuleContext<NameDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CullDeclarationContext cullDeclaration() {
			return GetRuleContext<CullDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ZTestDeclarationContext zTestDeclaration() {
			return GetRuleContext<ZTestDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ZWriteDeclarationContext zWriteDeclaration() {
			return GetRuleContext<ZWriteDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlendDeclarationContext blendDeclaration() {
			return GetRuleContext<BlendDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlendOpDeclarationContext blendOpDeclaration() {
			return GetRuleContext<BlendOpDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ColorMaskDeclarationContext colorMaskDeclaration() {
			return GetRuleContext<ColorMaskDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StencilBlockContext stencilBlock() {
			return GetRuleContext<StencilBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HlslProgramDeclarationContext hlslProgramDeclaration() {
			return GetRuleContext<HlslProgramDeclarationContext>(0);
		}
		public PassDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_passDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPassDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PassDeclarationContext passDeclaration() {
		PassDeclarationContext _localctx = new PassDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_passDeclaration);
		try {
			State = 120;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__6:
				EnterOuterAlt(_localctx, 1);
				{
				State = 111;
				nameDeclaration();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 2);
				{
				State = 112;
				cullDeclaration();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 3);
				{
				State = 113;
				zTestDeclaration();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 4);
				{
				State = 114;
				zWriteDeclaration();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 5);
				{
				State = 115;
				blendDeclaration();
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 6);
				{
				State = 116;
				blendOpDeclaration();
				}
				break;
			case T__12:
				EnterOuterAlt(_localctx, 7);
				{
				State = 117;
				colorMaskDeclaration();
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 8);
				{
				State = 118;
				stencilBlock();
				}
				break;
			case HlslProgram:
				EnterOuterAlt(_localctx, 9);
				{
				State = 119;
				hlslProgramDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AttributeDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BracketLiteral() { return GetToken(ShaderLabParser.BracketLiteral, 0); }
		public AttributeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attributeDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttributeDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AttributeDeclarationContext attributeDeclaration() {
		AttributeDeclarationContext _localctx = new AttributeDeclarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_attributeDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			Match(BracketLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberLiteralExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IntegerLiteral() { return GetToken(ShaderLabParser.IntegerLiteral, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FloatLiteral() { return GetToken(ShaderLabParser.FloatLiteral, 0); }
		public NumberLiteralExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numberLiteralExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberLiteralExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberLiteralExpressionContext numberLiteralExpression() {
		NumberLiteralExpressionContext _localctx = new NumberLiteralExpressionContext(Context, State);
		EnterRule(_localctx, 12, RULE_numberLiteralExpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			_la = TokenStream.LA(1);
			if ( !(_la==IntegerLiteral || _la==FloatLiteral) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VectorLiteralExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberLiteralExpressionContext[] numberLiteralExpression() {
			return GetRuleContexts<NumberLiteralExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberLiteralExpressionContext numberLiteralExpression(int i) {
			return GetRuleContext<NumberLiteralExpressionContext>(i);
		}
		public VectorLiteralExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vectorLiteralExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVectorLiteralExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VectorLiteralExpressionContext vectorLiteralExpression() {
		VectorLiteralExpressionContext _localctx = new VectorLiteralExpressionContext(Context, State);
		EnterRule(_localctx, 14, RULE_vectorLiteralExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			Match(T__3);
			State = 127;
			numberLiteralExpression();
			State = 128;
			Match(T__4);
			State = 129;
			numberLiteralExpression();
			State = 130;
			Match(T__4);
			State = 131;
			numberLiteralExpression();
			State = 132;
			Match(T__4);
			State = 133;
			numberLiteralExpression();
			State = 134;
			Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextureLiteralExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringLiteral() { return GetToken(ShaderLabParser.StringLiteral, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(ShaderLabParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(ShaderLabParser.RightBrace, 0); }
		public TextureLiteralExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_textureLiteralExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTextureLiteralExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
